samples/_failures_safe/1761399797_3573c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f722098e.c: In function ‘main’:
./samples/SAFE/__tmp_f722098e.c:155:34: error: expected ‘)’ at end of input
  155 |                 } else if (status
      |                           ~      ^
      |                                  )
./samples/SAFE/__tmp_f722098e.c:155:17: error: expected declaration or statement at end of input
  155 |                 } else if (status
      |                 ^
./samples/SAFE/__tmp_f722098e.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f722098e.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f722098e.c:155:17: error: expected declaration or statement at end of input
